@@ -18,7 +18,7 @@
             "level":"INFO",
             "formatter":"simple",
             "filename":"log/info.log",
-            "maxBytes":"10485760",
+            "maxBytes":209715200,
             "backupCount":20,
             "encoding":"utf8"
         },
